Z-index issue in user adding page

--- a/src/app/blog/organization/[id]/settings/members/useradd.module.css
+++ b/src/app/blog/organization/[id]/settings/members/useradd.module.css
@@ -20,6 +20,7 @@
     bottom: 0%;
     left: 0%;
     right: 0%;
+    z-index: 15;
 }
 
 .userAddingWindow > label {
